@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - Added ffi_options function (gh#3, gh#8)
 
 0.05      2019-02-18 11:24:43 -0500
   - Fix downstream install bug on Windows (gh#1)
